--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title></title>
   </head>
   <body>
-    <img src="pdf/Rachel_CV_3_1.jpg">
+    <img src="pdf/Rachel_CV_3_1.jpg" class="img-responsive">
   </body>
 </html>
