--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html>
 <html>
-    <img src="pdf/Rachel_CV_3_1.jpg" class="img-responsive">
+    <img src="pdf/Rachel_CV_3_1.jpg" class="img-responsive"  alt="page 1"/>
 </html>
