--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
-    <img src="pdf/Rachel_CV_3_1.jpg" class="img-responsive"  alt="page 1"/>
-    <img src="pdf/Rachel_CV_3_2.jpg" class="img-responsive"  alt="page 2"/>
+    <img src="pdf/Rachel_CV_3_1.jpg" class="center"  alt="page 1"/>
+    <!-- 
+        <img src="pdf/Rachel_CV_3_2.jpg" class="img-responsive"  alt="page 2"/>
+    -->
 </html>
