--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <img src="pdf/Rachel_CV_3_1.jpg" class="center"  alt="page 1"/>
+    <img src="pdf/Rachel_CV_3_merged.png" class="img-responsive"  alt="page 1 and 2"/>
     <!-- 
         <img src="pdf/Rachel_CV_3_2.jpg" class="img-responsive"  alt="page 2"/>
     -->
