--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
-    <img src="pdf/Rachel_CV_3_merged.png" class="img-responsive"  alt="page 1 and 2"/>
-    <!-- 
-        <img src="pdf/Rachel_CV_3_2.jpg" class="img-responsive"  alt="page 2"/>
-    -->
+    <body style="background-color:#1c87c9;">
+        <center>
+            <img src="pdf/Rachel_CV_3_merged.png" class="img-responsive"  alt="page 1 and 2"/>
+            <!-- 
+                <img src="pdf/Rachel_CV_3_2.jpg" class="img-responsive"  alt="page 2"/>
+            -->
+        </center>
+    </body>
 </html>
